chore(vertexai): tweak tests