@@ -30,8 +30,8 @@ import com.google.cloud.vertexai.generativeai.GenerativeModel;
 import com.google.cloud.vertexai.generativeai.PartMaker;
 import com.google.cloud.vertexai.generativeai.ResponseHandler;
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
 
 public class FunctionCalling {
   public static void main(String[] args) throws IOException {
@@ -77,7 +77,7 @@ public class FunctionCalling {
 
       // Start a chat session from a model, with the use of the declared function.
       GenerativeModel model = new GenerativeModel(modelName, vertexAI)
-          .withTools(List.of(tool));
+          .withTools(Arrays.asList(tool));
       ChatSession chat = model.startChat();
 
       System.out.println(String.format("Ask the question: %s", promptText));
